# PyPlayground

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml  setup.py  shader_transpiler.py
src_cpp/: wrapper.cpp  wrapper.h
src_cpp/core/: PlaygroundBase.cpp  PlaygroundBase.h  _Wrapper.cpp  _Wrapper.h  color.cpp  color.h  playground_base.cpp  playground_base.h  playground_exception.cpp  playground_exception.h
src_cpp/display/: Camera.cpp  Camera.h  Window.cpp  Window.h  window.cpp  window.h
src_cpp/event/: event.cpp  event.h  event_emitter.cpp  event_emitter.h
src_cpp/math/: Color.cpp  Color.h  Vector4.cpp  Vector4.h
src_cpp/messenger/: Messenger.cpp  Messenger.h
src_cpp/notify/: Notify.cpp  Notify.h
src_cpp/render/: Renderer.cpp  Renderer.h  container.cpp  container.h  renderer.cpp  renderer.h
src_cpp/renderer/: Renderer.cpp  Renderer.h
src_cpp/scene/: CameraNode.cpp  CameraNode.h  SceneNode.cpp  SceneNode.h
src_cpp/shaders/: .gitignore  Generic.frag  Shader.cpp  Shader.h  test.vert
src_cpp/task/: InternalTask.cpp  InternalTask.h  Task.cpp  Task.h  TaskCollection.cpp  TaskCollection.h  TaskManager.cpp  TaskManager.h  task.cpp  task.h  task_manager.cpp  task_manager.h
src_py/: __init__.py
src_py/core/: __init__.py  color.py  playground_app.py  playground_base.py  playground_exception.py
src_py/event/: __init__.py  event_emitter.py
src_py/render/: __init__.py  container.py
src_py/task/: __init__.py  task.py  task_manager.py
tests/: test_sanity.py
